--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js"
+    
   },
   "dependencies": {
     "axios": "^0.21.1",
     "bulma-toast": "^2.3.1",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-country-region-select": "^2.0.16",
