--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "start": "node server.js"
-    
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -18,6 +17,7 @@
     "vue": "^2.6.11",
     "vue-country-region-select": "^2.0.16",
     "vue-router": "^3.2.0",
+    "vue-signature-pad": "^2.0.4",
     "vue-toastification": "^1.7.11",
     "vue-toastify": "^1.8.0",
     "vuetify": "^2.4.0",
