--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-country-region-select": "^2.0.16",
+    "vue-observe-visibility": "^1.0.0",
     "vue-router": "^3.2.0",
     "vue-signature-pad": "^2.0.4",
     "vue-toastification": "^1.7.11",
