--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bulma-toast": "^2.3.1",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "print-js": "^1.6.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-country-region-select": "^2.0.16",
